[package]
name = "win32-com-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
serde_json = "1.0.142"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
